<resources>
    <string name="app_name">Evaluación UE</string>
    <string name="welcome">Hola</string>
    <string name="sign_in">Iniciar Sesión</string>
    <string name="signin_message">Nos da gusto tenerte de vuelta…</string>
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="signin">ACCEDER</string>
    <string name="errorData">Datos Incorrectos</string>

    <string name="error_connection">Error de Conexión</string>
    <string name="success_save">Guardado</string>
    <string name="error_save">Error al guardar</string>

    <string name="edit">Editar</string>
    <string name="delete">Eliminar</string>

    // Navegación
    <string name="charts">Estadísticas</string>
    <string name="places">Unidades Económicas</string>
    <string name="unidades_economicas">Evaluaciones Realizadas</string>
    <string name="evaluation_ue">Realizar Evaluación</string>

    <string name="evaluationUE">Evaluación para seleccionar a la UE</string>
    <string name="sign_off">Cerrar Sesión</string>
    <string name="sign_off_message">¿Quieres cerrar sesión?</string>

    <string name="positive_button">ACEPTAR</string>
    <string name="negative_button">CANCELAR</string>

    <string name="biometric_auth">Acceso con Sensor</string>
    <string name="biometric_auth_message">¿Quieres activar el acceso con sensor de huellas?</string>
    <string name="biometric_true">ACTIVAR</string>
    <string name="biometric_false">Desactivar</string>
    <string name="biometric_on">Acceso con sensor de huellas activado</string>
    <string name="biometric_off">Acceso con sensor de huellas desactivado</string>
    <string name="biometric_title">Iniciar sesión</string>
    <string name="biometric_message">Confirme la huella digital para continuar</string>

    <string name="ue">Unidad Económica</string>
    <string name="period">Periodo</string>
    <string name="date">Fecha</string>
    <string name="section1">Situación Legal</string>
    <string name="section2">Situación Educativa/Formativa</string>
    <string name="section3">Factores Socioeconómicos</string>
    <string name="section4">Resultado</string>
    <string name="question1">¿La UE está legalmente constituida, acreditada con el ordenamiento de creación o registro ante al Servicio de Administración Tributaria?</string>
    <string name="question2">¿La UE está dispuesta a firmar el Convenio Especifico de Cooperación, con la Institución Educativa?</string>
    <string name="question3">¿La UE está dispuesta a firmar el Convenio de Aprendizaje, entre la IE, la UE y el Estudiante Dual?</string>
    <string name="question4">¿La UE está dispuesta a firmar el Convenio Marco de Colaboración con la IE?</string>
    <string name="question5">¿La UE cuenta con personal capacitado y actualizado en las áreas de conocimiento afines al perfil de egreso del Estudiante Dual?</string>
    <string name="question6">¿La UE cuenta con áreas especializadas afines al perfil de egreso del Estudiante Dual?</string>
    <string name="question7">¿La UE puede designar a un Mentor que cuente con al menos titulo de nivel licenciatura, responsable de conducir el proceso de aprendizaje del Estudiante Dual?</string>
    <string name="question8">¿La UE puede cumplir con un plan de formación acorde a los planes y programas de la IE?</string>
    <string name="question9">¿La UE, tiene capacidad de llevar a cabo el plan de formación por un año como mínimo y tres años como máximo?</string>
    <string name="question10">¿La UE puede generar Puestos de Aprendizaje?</string>
    <string name="question11">¿La UE está en posibilidad de brindar apoyos económicos, transporte, alimentación, en su caso?</string>
    <string name="question12">¿La UE está a menos de 20km de distancia de la IE?</string>
    <string name="question13">¿La UE cuida que las actividades de los Estudiantes Dual no sean peligrosas para su salud, seguridad, moralidad, etc.?</string>
    <string name="answer_1">No</string>
    <string name="answer_2">Si</string>
    <string name="answer_3">No Cumple</string>
    <string name="answer_4">Parcialmente</string>
    <string name="answer_5">Cumple</string>
    <string-array name="totals">
        <item>Alta Vulnerabilidad; Unidad Económica no viable para incorporarse a Educación Dual</item>
        <item>Mediana Vulnerabilidad; Unidad Económica con opción a incorporarse a Educación Dual</item>
        <item>Baja Vulnerabilidad; Unidad Económica apta para incorporar a Educación Dual</item>
    </string-array>
    <string name="save">Guardar</string>
    <string name="action_search">Buscar…</string>
    <string name="previous">Anterior</string>
    <string name="next">Siguiente</string>
    <string name="anwersEmpty">Preguntas sin contestar</string>
    <string name="close">Cerrar</string>
    <string name="direccion">Dirección:</string>
    <string name="viaje">Información de viaje:</string>
    <string name="distance">Distancia:</string>
    <string name="duration">Duración:</string>
</resources>
