<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".evaluation_ue.QuestionsUE"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginHorizontal="32dp"
        android:paddingBottom="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginVertical="@dimen/margin">

            <TextView
                android:id="@+id/date"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_weight="1"
                android:gravity="center_vertical|start"/>

            <TextView
                android:id="@+id/period"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:layout_weight="1"
                android:gravity="center_vertical|end"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_business_black_24dp"
                android:tint="@color/iconColor"
                android:contentDescription="@string/ue" />
            <TextView
                android:id="@+id/text_view_ue"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/ue"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:gravity="center_vertical"/>
        </LinearLayout>

        <Spinner
            android:id="@+id/unidades_economicas"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:popupBackground="@color/cardBackgroundColor"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="@dimen/margin">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_school_black_24dp"
                android:tint="@color/iconColor"
                android:contentDescription="@string/ue" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/section2"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:gravity="center_vertical"/>
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.MaterialComponents.CardView"
            app:cardBackgroundColor="@color/cardBackgroundColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:minHeight="100dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/question5"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_margin="@dimen/component_margin" />

        </com.google.android.material.card.MaterialCardView>

        <RadioGroup
            android:id="@+id/answers5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/first5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppTheme.RadioButton"
                android:background="@drawable/radio_states_red"
                android:text="@string/answer_3"/>
            <RadioButton
                android:id="@+id/second5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppTheme.RadioButton"
                android:background="@drawable/radio_states_red"
                android:text="@string/answer_4"/>
            <RadioButton
                android:id="@+id/third5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/AppTheme.RadioButton"
                android:background="@drawable/radio_states_red"
                android:text="@string/answer_5"/>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginVertical="@dimen/margin">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:src="@drawable/ic_playlist_add_check_black_24dp"
                android:tint="@color/iconColor"
                android:contentDescription="@string/ue" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/section4"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:gravity="center_vertical"/>
        </LinearLayout>

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.MaterialComponents.CardView"
            app:cardBackgroundColor="@color/cardBackgroundColor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:minHeight="100dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:gravity="center"
                android:layout_gravity="center"
                android:layout_margin="@dimen/margin" />

        </com.google.android.material.card.MaterialCardView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/material_button"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_gravity="center"
                android:layout_marginVertical="@dimen/margin"
                android:layout_marginEnd="@dimen/margin"
                android:layout_weight="1"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/material_button1"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_gravity="center"
                android:layout_marginVertical="@dimen/margin"
                android:layout_marginStart="@dimen/margin"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>

</ScrollView>