<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignInActivity">

    <ImageView
        android:id="@+id/bg1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@mipmap/login"
        android:scaleType="centerCrop"
        android:contentDescription="@string/app_name"
        android:transitionName="bg1"/>

    <ImageView
        android:id="@+id/bg2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000"
        android:alpha="0.6"
        android:contentDescription="@string/app_name"
        android:transitionName="bg2"/>

    <ScrollView
        android:id="@+id/lol"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="@dimen/margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:src="@drawable/logo_tescha"
                android:scaleType="centerInside"
                android:contentDescription="@string/app_name"
                android:layout_marginBottom="50dp"
                android:transitionName="logo_tescha"/>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/sign_in_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/cardColorBackground"
                android:minHeight="200dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:layout_marginBottom="@dimen/component_margin"
                        android:gravity="center"
                        android:text="@string/signin_message"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/email"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        app:boxBackgroundColor="@color/textFieldColorBackground"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/component_margin"
                        android:hint="@string/email"
                        app:startIconDrawable="@drawable/ic_email_black_24dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/password"
                        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                        app:boxBackgroundColor="@color/textFieldColorBackground"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="@dimen/component_margin"
                        android:hint="@string/password"
                        app:endIconMode="password_toggle"
                        app:startIconDrawable="@drawable/ic_lock_outline_black_24dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/signIn"
                        style="@style/Widget.MaterialComponents.Button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginVertical="@dimen/component_margin"
                        android:text="@string/signin"
                        android:textColor="@android:color/white"/>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>